--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         "cakephp/cakephp": "3.5.*",
         "cakephp/migrations": "^1.0",
         "cakephp/plugin-installer": "^1.0",
+        "captcha-com/cakephp-captcha": "^4.2",
+        "holt59/cakephp3-bootstrap-helpers": "dev-master",
         "josegonzalez/dotenv": "2.*",
-        "mobiledetect/mobiledetectlib": "2.*",
-        "holt59/cakephp3-bootstrap-helpers": "dev-master"
+        "mobiledetect/mobiledetectlib": "2.*"
     },
     "require-dev": {
         "cakephp/bake": "^1.1",
